// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
<div
  className="App"
>
  <div>
    <nav
      className="px-5 navbar navbar-expand-lg navbar-light bg-white"
    >
      <a
        className="fs-2 fw-medium navbar-brand"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="planet log"
          height={55}
          src="planet.png"
          width={55}
        />
          
        Space Traveler's Hub
      </a>
      <button
        aria-controls="basic-navbar-nav "
        aria-label="Toggle navigation"
        className="navbar-toggler collapsed"
        onClick={[Function]}
        type="button"
      >
        <span
          className="navbar-toggler-icon"
        />
      </button>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
        id="basic-navbar-nav"
      >
        <div
          className="fs-5 navList navbar-nav"
          onKeyDown={[Function]}
        >
          <a
            aria-current="page"
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              }
            }
            className="nav-link active"
            href="/"
            onClick={[Function]}
          >
            Rockets
          </a>
          <a
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              }
            }
            className="nav-link"
            href="/missions"
            onClick={[Function]}
          >
            Missions
          </a>
          <div
            className="d-none d-md-none d-lg-block mt-3 mb-3 vr"
          />
          <a
            as={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              }
            }
            className="nav-link"
            href="/profile"
            onClick={[Function]}
          >
            My profile
          </a>
        </div>
      </div>
    </nav>
    <hr />
  </div>
</div>
`;

exports[`NavBar page renders correctly 1`] = `
<div>
  <nav
    className="px-5 navbar navbar-expand-lg navbar-light bg-white"
  >
    <a
      className="fs-2 fw-medium navbar-brand"
      href="/"
      onClick={[Function]}
    >
      <img
        alt="planet log"
        height={55}
        src="planet.png"
        width={55}
      />
        
      Space Traveler's Hub
    </a>
    <button
      aria-controls="basic-navbar-nav "
      aria-label="Toggle navigation"
      className="navbar-toggler collapsed"
      onClick={[Function]}
      type="button"
    >
      <span
        className="navbar-toggler-icon"
      />
    </button>
    <div
      aria-expanded={null}
      className="justify-content-end navbar-collapse collapse"
      id="basic-navbar-nav"
    >
      <div
        className="fs-5 navList navbar-nav"
        onKeyDown={[Function]}
      >
        <a
          aria-current="page"
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          className="nav-link active"
          href="/"
          onClick={[Function]}
        >
          Rockets
        </a>
        <a
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          className="nav-link"
          href="/missions"
          onClick={[Function]}
        >
          Missions
        </a>
        <div
          className="d-none d-md-none d-lg-block mt-3 mb-3 vr"
        />
        <a
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            }
          }
          className="nav-link"
          href="/profile"
          onClick={[Function]}
        >
          My profile
        </a>
      </div>
    </div>
  </nav>
  <hr />
</div>
`;
